# tracer_svr

./: .gitignore  CHANGELOG  CHANGELOG.md  Cargo.toml  LICENSE  README  README.md
.github/workflows/: build.yaml
core/: Cargo.toml  README.md
core/src/: config.rs  database.rs  lib.rs  log.rs  startup.rs  typedefs.rs
core/src/database/: db_rbatis.rs  log_plugin.rs  mod.rs
entity/: Cargo.toml
entity/src/: lib.rs  proj_list.rs
sqlite_data/: trace_data.sqlite
tracer_svr/: Cargo.toml
tracer_svr/entity/src/: proj_list.rs
tracer_svr/src/: main.rs
tracer_svr/src/api/: mod.rs
tracer_svr/src/api/svr/: mod.rs  proj_list.rs
tracer_svr/src/basic/: error.rs
tracer_svr/src/error/: mod.rs
tracer_svr/src/model/: human.rs  mod.rs  proj_list_model.rs
tracer_svr/src/model/sql/: mod.rs  projlist_sql.rs  tracer_sql.rs
tracer_svr/src/utils/: mod.rs
