[workspace]
members=['core', 'tracer_svr', 'entity']

[workspace.dependencies]
tokio = { version = "1.24.1", features = ["full"] }

actix-web = "4.2.1"
sea-orm = { version = "^0.10.6", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "debug-print",]}
sea-orm-migration = "^0.10.6"

log = "0.4.17"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.2"