[package]
name = "core"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
name = "core"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
once_cell = "1.17.0"

tokio.workspace = true

actix-web.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true

log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

tempfile = "3.3.0"