[package]
name = "core"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
name = "core"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
once_cell = "1.17.0"

tokio = { version = "1.24.1", features = ["full"] }

actix-web = "4.2.1"

log = "0.4.17"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = { package = "clia-tracing-appender", version = "0.2" }
tracing-actix-web = "0.7.2"
clia-local-offset = "0.1"

rbatis = { version = "4.0.49", optional = true }
rbs = { version = "0.1.15", optional = true }
rbdc-sqlite = { version = "0.1.15", optional = true }

serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"

thiserror = "1.0.37"

[features]
default = []
db = ["dep:rbatis", "dep:rbs"]
sqlite = ["dep:rbdc-sqlite"]