[package]
name = "tracer_svr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core", features = ["sqlite"]}
actix-web = "4.2.1"
tracing = "0.1.37"
tokio = { version = "1.24.1", features = ["full"] }
thiserror = "1.0.37"

serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"